补全所有新特性